@@ -31,7 +31,7 @@ PH::print_stdout("***********************************************");
 PH::print_stdout("*********** " . basename(__FILE__) . " UTILITY **************");
 PH::print_stdout("");
 
-$util = new XMLOPJSON("xmlopjson", $argv, __FILE__ );
+$util = new XMLOPJSON("xml-op-json", $argv, __FILE__ );
 
 PH::print_stdout("");
 PH::print_stdout("************* END OF SCRIPT " . basename(__FILE__) . " ************" );
