@@ -2,6 +2,7 @@ CHANGELOG
 
 2.0.18
 UTILS:
+* pan-os-php / API / bash_autocompletion | extend with script xml-op-json and bpa-generator
 
 BUGFIX:
 
